--- a/app/src/main/res/layout/activity_bst.xml
+++ b/app/src/main/res/layout/activity_bst.xml
@@ -7,6 +7,19 @@
     android:background="#222125"
     tools:context=".bst">
 
+    <TextView
+        android:id="@+id/displayText"
+        android:layout_width="198dp"
+        android:layout_height="111dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginEnd="44dp"
+        android:layout_marginBottom="12dp"
+        android:textColor="#ffb94a"
+        app:layout_constraintBottom_toTopOf="@+id/addNode"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
     <Button
         android:id="@+id/back"
         android:layout_width="wrap_content"
@@ -19,9 +32,9 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/introducereNod"
+        android:id="@+id/addNode"
         android:layout_width="0dp"
-        android:layout_height="71dp"
+        android:layout_height="50dp"
         android:layout_marginEnd="6dp"
         android:backgroundTint="#ffb94a"
         android:ems="10"
@@ -33,32 +46,32 @@
 
     <Button
         android:id="@+id/Add"
-        android:layout_width="90dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="29dp"
         android:layout_marginEnd="7dp"
         android:backgroundTint="#ffb94a"
         android:text="Add"
-        app:layout_constraintBaseline_toBaselineOf="@+id/introducereNod"
-        app:layout_constraintEnd_toStartOf="@+id/introducereNod"
+        app:layout_constraintBottom_toBottomOf="@+id/addNode"
+        app:layout_constraintEnd_toStartOf="@+id/addNode"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/Delete"
-        android:layout_width="90dp"
-        android:layout_height="50dp"
-        android:layout_marginEnd="24dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="29dp"
         android:backgroundTint="#ffb94a"
         android:text="Delete"
-        app:layout_constraintBaseline_toBaselineOf="@+id/introducereNod"
+        app:layout_constraintBottom_toTopOf="@+id/Successor"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/introducereNod" />
+        app:layout_constraintStart_toEndOf="@+id/addNode" />
 
     <Button
         android:id="@+id/Successor"
-        android:layout_width="125dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="31dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="53dp"
         android:backgroundTint="#ffb94a"
         android:text="Find successor"
         app:layout_constraintBottom_toTopOf="@+id/Max"
@@ -67,129 +80,112 @@
 
     <Button
         android:id="@+id/Predecessor"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="13dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="9dp"
         android:backgroundTint="#ffb94a"
         android:text="Find predecessor"
         app:layout_constraintEnd_toStartOf="@+id/Successor"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/introducereNod" />
+        app:layout_constraintTop_toBottomOf="@+id/Add" />
 
     <Button
         android:id="@+id/Min"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="4dp"
         android:backgroundTint="#ffb94a"
         android:text="Find minimum"
         app:layout_constraintBottom_toTopOf="@+id/Inorder"
-        app:layout_constraintEnd_toStartOf="@+id/Preorder"
-        app:layout_constraintStart_toStartOf="@+id/Preorder" />
+        app:layout_constraintEnd_toStartOf="@+id/Max"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/Max"
-        android:layout_width="150dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="14dp"
+        android:layout_marginBottom="4dp"
         android:backgroundTint="#ffb94a"
         android:text="Find maximum"
         app:layout_constraintBottom_toTopOf="@+id/Postorder"
-        app:layout_constraintEnd_toEndOf="@+id/Postorder" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/Min" />
 
     <Button
         android:id="@+id/Inorder"
-        android:layout_width="125dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="5dp"
-        android:layout_marginEnd="11dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="12dp"
         android:backgroundTint="#ffb94a"
         android:text="Inorder"
+        app:layout_constraintBottom_toTopOf="@+id/Height"
         app:layout_constraintEnd_toStartOf="@+id/Preorder"
         app:layout_constraintHorizontal_chainStyle="packed"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/Preorder" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/Preorder"
-        android:layout_width="125dp"
-        android:layout_height="50dp"
-        android:layout_marginEnd="11dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="6dp"
         android:backgroundTint="#ffb94a"
         android:text="Preorder"
+        app:layout_constraintBottom_toTopOf="@+id/Display"
         app:layout_constraintEnd_toStartOf="@+id/Postorder"
-        app:layout_constraintStart_toEndOf="@+id/Inorder"
-        app:layout_constraintTop_toBottomOf="@+id/Max" />
+        app:layout_constraintStart_toEndOf="@+id/Inorder" />
 
     <Button
         android:id="@+id/Postorder"
-        android:layout_width="125dp"
-        android:layout_height="50dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="341dp"
         android:backgroundTint="#ffb94a"
         android:text="Postorder"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/Preorder"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/logo" />
 
     <Button
         android:id="@+id/Display"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_marginEnd="13dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:backgroundTint="#ffb94a"
         android:text="Display"
         app:layout_constraintEnd_toStartOf="@+id/Height"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Inorder" />
 
     <Button
         android:id="@+id/Height"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="85dp"
-        android:layout_marginEnd="74dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="26dp"
         android:backgroundTint="#ffb94a"
         android:text="Height"
-        app:layout_constraintEnd_toEndOf="@+id/Postorder"
-        app:layout_constraintStart_toStartOf="@+id/Preorder"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/Display"
         app:layout_constraintTop_toBottomOf="@+id/Postorder" />
 
     <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="0dp"
-        android:layout_height="71dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="186dp"
-        android:layout_marginEnd="36dp"
-        android:layout_marginBottom="186dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/Height"
-        app:layout_constraintStart_toEndOf="@+id/Add"
-        app:layout_constraintTop_toTopOf="@+id/Max"
-        app:srcCompat="@drawable/app" />
-
-    <androidx.constraintlayout.helper.widget.Flow
-        android:id="@+id/flow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="parent"
-        app:layout_constraintEnd_toStartOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/afisare"
-        android:layout_width="0dp"
-        android:layout_height="71dp"
-        android:layout_marginStart="44dp"
-        android:layout_marginTop="22dp"
-        android:layout_marginEnd="44dp"
-        android:layout_marginBottom="25dp"
-        android:textColor="#ffb94a"
-        app:layout_constraintBottom_toTopOf="@+id/introducereNod"
+        android:id="@+id/logo"
+        android:layout_width="123dp"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="227dp"
+        app:layout_constraintBottom_toTopOf="@+id/Postorder"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/app" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
