--- a/app/src/main/res/layout/activity_at.xml
+++ b/app/src/main/res/layout/activity_at.xml
@@ -5,10 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#222125"
-    tools:context=".bst">
-
+    tools:context=".at">
     <TextView
-        android:id="@+id/displayText"
+        android:id="@+id/displayText4"
         android:layout_width="198dp"
         android:layout_height="111dp"
         android:layout_marginStart="44dp"
@@ -193,6 +192,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/app" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
