--- a/app/src/main/res/layout/activity_at.xml
+++ b/app/src/main/res/layout/activity_at.xml
@@ -116,7 +116,7 @@
         android:layout_marginEnd="24dp"
         android:backgroundTint="#ffb94a"
         android:text="Find maximum"
-        app:layout_constraintBottom_toTopOf="@+id/Postorder"
+        app:layout_constraintBottom_toTopOf="@+id/InorderBT"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/Min" />
 
@@ -139,12 +139,12 @@
         android:backgroundTint="#ffb94a"
         android:text="Preorder"
         app:layout_constraintBottom_toTopOf="@+id/Display"
-        app:layout_constraintEnd_toStartOf="@+id/Postorder"
+        app:layout_constraintEnd_toStartOf="@+id/InorderBT"
         app:layout_constraintStart_toEndOf="@+id/Inorder"
         app:layout_constraintTop_toBottomOf="@+id/Min" />
 
     <Button
-        android:id="@+id/Postorder"
+        android:id="@+id/InorderBT"
         android:layout_width="125dp"
         android:layout_height="50dp"
         android:layout_marginStart="8dp"
@@ -179,7 +179,7 @@
         android:text="Height"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/Display"
-        app:layout_constraintTop_toBottomOf="@+id/Postorder" />
+        app:layout_constraintTop_toBottomOf="@+id/InorderBT" />
 
     <ImageView
         android:id="@+id/logo"
@@ -188,7 +188,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="227dp"
-        app:layout_constraintBottom_toTopOf="@+id/Postorder"
+        app:layout_constraintBottom_toTopOf="@+id/InorderBT"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/app" />
